--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "redux": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^3.1.0",
+    "swal": "^0.1.0",
+    "sweetalert2": "^11.10.2",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.3"
   },
